# proper-time

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/RelSpacetime/: AnalyticalRaytracer.h  DelayedTimeSolver.h  LocalFrame.h  MetricTensor.h  RelativityTypes.h  RelativityVisualsAPI.h  SpacetimeInterpolator.h  SpacetimeVector.h  Transform.h  VisualFX.h  WorldlineIntegrator.h
scripts/: generate_kerr.py
src/: AnalyticalRaytracer.cpp  DelayedTimeSolver.cpp  KerrChristoffel.inl  KerrMetric.inl  KerrShadow.inl  LocalFrame.cpp  MetricTensor.cpp  SpacetimeInterpolator.cpp  SpacetimeVector.cpp  Transform.cpp  VisualFX.cpp  WorldlineIntegrator.cpp
src_godot/: GDEntityState.cpp  GDEntityState.h  GDRelativityAPI.cpp  GDRelativityAPI.h  register_types.cpp
tests/: CMakeLists.txt  test_blackhole.cpp  test_integration.cpp  test_integrator.cpp  test_kerr.cpp  test_metrics.cpp  test_optics.cpp  test_shooting.cpp  test_solver.cpp  test_tetrad.cpp  test_transform.cpp
